fix: Hyphenate title on mobile

--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -48,7 +48,7 @@
   },
   "search": {
     "messageBeta": "Bèta",
-    "title": "Termennetwerk",
+    "title": "Termen­netwerk",
     "subtitle": "Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten",
     "placeholderQuery": "Vul een zoekvraag in, zoals: Fietsen",
     "placeholderDatasets": "Selecteer een of meer terminologiebronnen",
