Phrase terms found

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,8 +13,7 @@
     "placeholderQuery": "Enter a search query, e.g. Rembrandt",
     "placeholderDatasets": "Select one or more terminology sources",
     "buttonSearch": "Search",
-    "messageNoResultsFound": "No results found",
-    "termsFound": "no terms | {n} term | {n} terms",
+    "termsFound": "no terms found | {n} term found | {n} terms found",
     "altLabel": "Alternative label | Alternative labels",
     "broaderTerm": "Broader term | Broader terms",
     "narrowerTerm": "Narrower term | Narrower terms",
