--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -13,8 +13,7 @@
     "placeholderQuery": "Vul een zoekvraag in, zoals: Fietsen",
     "placeholderDatasets": "Selecteer een of meer terminologiebronnen",
     "buttonSearch": "Zoeken",
-    "messageNoResultsFound": "Geen resultaten gevonden",
-    "termsFound": "geen termen | {n} term | {n} termen",
+    "termsFound": "geen termen gevonden | {n} term gevonden | {n} termen gevonden",
     "altLabel": "Alternatief label | Alternatieve labels",
     "broaderTerm": "Bredere term | Bredere termen",
     "narrowerTerm": "Nauwere term | Nauwere termen",
