--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,18 +10,29 @@
   "search": {
     "title": "Network of Terms",
     "subtitle": "Searching shared thesauri, classification systems, and reference lists",
+    "tabSearch": "Search terms",
+    "tabLookup": "Look up term",
+    "placeholderUri": "For example http://vocab.getty.edu/aat/300033618",
     "placeholderQuery": "Enter a search query, e.g. Rembrandt",
     "placeholderDatasets": "Select one or more terminology sources",
     "buttonSearch": "Search",
+    "buttonLookup": "Look up",
+    "labelQuery": "Search words",
+    "labelTermSources": "Terminology sources",
+    "labelUri": "Term URI",
     "termsFound": "no terms found | {n} term found | {n} terms found",
     "altLabel": "Alternative label | Alternative labels",
     "broaderTerm": "Broader term | Broader terms",
     "narrowerTerm": "Narrower term | Narrower terms",
     "relatedTerm": "Related term | Related terms",
     "copyUri": "Copy URI",
-    "viewAtSource": "View at source"
+    "viewAtSource": "View at source",
+    "sourceNotFound": "No terminology source can provide this URI"
   },
   "language": {
     "label": "Taal"
+  },
+  "api": {
+    "NotFoundError": "No term found with this URI"
   }
 }
