--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -10,18 +10,29 @@
   "search": {
     "title": "Termen­netwerk",
     "subtitle": "Zoeken in gemeenschappelijke thesauri, classificatiesystemen en referentielijsten",
+    "tabSearch": "Zoeken naar termen",
+    "tabLookup": "Zoeken met URI",
+    "placeholderUri": "Bijvoorbeeld http://vocab.getty.edu/aat/300033618",
     "placeholderQuery": "Vul een zoekvraag in, zoals: Fietsen",
     "placeholderDatasets": "Selecteer een of meer terminologiebronnen",
     "buttonSearch": "Zoeken",
+    "buttonLookup": "Zoeken",
+    "labelQuery": "Zoekwoorden",
+    "labelTermSources": "Terminologiebronnen",
+    "labelUri": "URI van term",
     "termsFound": "geen termen gevonden | {n} term gevonden | {n} termen gevonden",
     "altLabel": "Alternatief label | Alternatieve labels",
     "broaderTerm": "Bredere term | Bredere termen",
     "narrowerTerm": "Nauwere term | Nauwere termen",
     "relatedTerm": "Gerelateerde term | Gerelateerde termen",
     "copyUri": "Kopieer URI",
-    "viewAtSource": "Bekijk bij bron"
+    "viewAtSource": "Bekijk bij bron",
+    "sourceNotFound": "Geen terminologiebron gevonden voor deze URI"
   },
   "language": {
     "label": "Language"
+  },
+  "api": {
+    "NotFoundError": "Geen term gevonden met deze URI"
   }
 }
