Improve card view (#344)
* Improve card view

* Full-width cards.
* Show related terms as buttons.
* Pluralize translations for headers.
* Show source abbreviation and publisher.

* Add background color to cards

* Remove spurious link

* Add View at source button

* Make term count more subtle

* Fix types

* Switch primary and secondary buttons

* Add card hover animation

* Button color

* Phrase terms found

* Fix whitespace

* Always show source button

* Reduce scale

--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -13,13 +13,13 @@
     "placeholderQuery": "Vul een zoekvraag in, zoals: Fietsen",
     "placeholderDatasets": "Selecteer een of meer terminologiebronnen",
     "buttonSearch": "Zoeken",
-    "messageNoResultsFound": "Geen resultaten gevonden",
-    "termsFound": "geen termen | {n} term | {n} termen",
-    "altLabel": "Alternatief label",
-    "broaderTerm": "Bredere term",
-    "narrowerTerm": "Nauwere term",
-    "relatedTerm": "Gerelateerde term",
-    "copyUri": "Kopieer URI"
+    "termsFound": "geen termen gevonden | {n} term gevonden | {n} termen gevonden",
+    "altLabel": "Alternatief label | Alternatieve labels",
+    "broaderTerm": "Bredere term | Bredere termen",
+    "narrowerTerm": "Nauwere term | Nauwere termen",
+    "relatedTerm": "Gerelateerde term | Gerelateerde termen",
+    "copyUri": "Kopieer URI",
+    "viewAtSource": "Bekijk bij bron"
   },
   "language": {
     "label": "Language"
