--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,13 +13,13 @@
     "placeholderQuery": "Enter a search query, e.g. Rembrandt",
     "placeholderDatasets": "Select one or more terminology sources",
     "buttonSearch": "Search",
-    "messageNoResultsFound": "No results found",
-    "termsFound": "no terms | {n} term | {n} terms",
-    "altLabel": "Alternative label",
-    "broaderTerm": "Broader term",
-    "narrowerTerm": "Narrower term",
-    "relatedTerm": "Related term",
-    "copyUri": "Copy URI"
+    "termsFound": "no terms found | {n} term found | {n} terms found",
+    "altLabel": "Alternative label | Alternative labels",
+    "broaderTerm": "Broader term | Broader terms",
+    "narrowerTerm": "Narrower term | Narrower terms",
+    "relatedTerm": "Related term | Related terms",
+    "copyUri": "Copy URI",
+    "viewAtSource": "View at source"
   },
   "language": {
     "label": "Taal"
