--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,8 +12,8 @@
     "subtitle": "Searching shared thesauri, classification systems, and reference lists",
     "tabSearch": "Search terms",
     "tabLookup": "Look up term",
-    "placeholderUri": "For example http://vocab.getty.edu/aat/300033618",
-    "placeholderQuery": "Enter a search query, e.g. Rembrandt",
+    "placeholderUri": "For example: http://vocab.getty.edu/aat/300033618",
+    "placeholderQuery": "For example: Rembrandt, Amsterdam or painting",
     "placeholderDatasets": "Select one or more terminology sources",
     "buttonSearch": "Search",
     "buttonLookup": "Look up",
