--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,21 @@
     "tabSearch": "Search terms",
     "tabLookup": "Look up term",
     "placeholderUri": "For example: http://vocab.getty.edu/aat/300033618",
+    "helpUri": "For example",
+    "examplesUri": [
+      {
+        "uri": "http://vocab.getty.edu/aat/300046300",
+        "label": "photographs"
+      },
+      {
+        "uri": "http://data.bibliotheken.nl/id/thes/p068230656",
+        "label": "Hella Haasse"
+      },
+      {
+        "uri": "http://www.wikidata.org/entity/Q749",
+        "label": "Groningen"
+      }
+    ],
     "placeholderQuery": "For example: Rembrandt, Amsterdam or painting",
     "placeholderDatasets": "Select one or more terminology sources",
     "buttonSearch": "Search",
