--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -13,6 +13,21 @@
     "tabSearch": "Zoeken met woorden",
     "tabLookup": "Zoeken met URI",
     "placeholderUri": "Bijvoorbeeld: http://vocab.getty.edu/aat/300033618",
+    "helpUri": "Bijvoorbeeld",
+    "examplesUri": [
+      {
+        "uri": "http://vocab.getty.edu/aat/300046300",
+        "label": "foto’s"
+      },
+      {
+        "uri": "http://data.bibliotheken.nl/id/thes/p068230656",
+        "label": "Hella Haasse"
+      },
+      {
+        "uri": "http://www.wikidata.org/entity/Q749",
+        "label": "Groningen"
+      }
+    ],
     "placeholderQuery": "Bijvoorbeeld: fietsen, schilderij of Amsterdam",
     "placeholderDatasets": "Selecteer een of meer terminologiebronnen",
     "buttonSearch": "Zoeken",
