--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "general": {
     "nde": "Dutch Digital Heritage Network",
-    "messageFooter": "Initiated by the <a href=\"https://www.netwerknetwerkdigitaalerfgoed.nl/en\">Dutch Digital Heritage Network</a> in collaboration with <a href=\"https://www.clariah.nl/en\">CLARIAH</a>"
+    "messageFooter": "Initiated by the <a href=\"https://www.netwerkdigitaalerfgoed.nl/en\">Dutch Digital Heritage Network</a> in collaboration with <a href=\"https://www.clariah.nl/en\">CLARIAH</a>"
   },
   "faq": {
     "title": "FAQ",
