feat: Handle errors from API (#390)

--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -48,6 +48,9 @@
     "label": "Language"
   },
   "api": {
-    "NotFoundError": "Geen term gevonden met deze URI"
+    "ServerError": "De terminologiebron kon de vraag niet verwerken",
+    "TimeoutError": "De terminologiebron is tijdelijk niet bereikbaar",
+    "NotFoundError": "Geen term gevonden met deze URI",
+    "Error": "Er is een fout opgetreden"
   }
 }
