feat: Show reconciliation endpoints in FAQ

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,7 +5,8 @@
   },
   "faq": {
     "title": "FAQ",
-    "subtitle": "Frequently asked questions about the Network of Terms"
+    "subtitle": "Frequently asked questions about the Network of Terms",
+    "copyUrl": "Copy URL"
   },
   "search": {
     "title": "Network of Terms",
