--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -5,7 +5,8 @@
   },
   "faq": {
     "title": "FAQ",
-    "subtitle": "Veelgestelde vragen over het Termennetwerk"
+    "subtitle": "Veelgestelde vragen over het Termennetwerk",
+    "copyUrl": "Kopieer URL"
   },
   "search": {
     "title": "Termen­netwerk",
