Special treatment of seeAlso
Demo for TOOI Waardelijsten

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -43,6 +43,7 @@
     "relatedTerm": "Related term | Related terms",
     "copyUri": "Copy URI",
     "viewAtSource": "View at source",
+    "seeOtherSource": "View other source",
     "sourceNotFound": "No terminology source can provide this URI"
   },
   "language": {
