--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -43,6 +43,7 @@
     "relatedTerm": "Gerelateerde term | Gerelateerde termen",
     "copyUri": "Kopieer URI",
     "viewAtSource": "Bekijk bij bron",
+    "seeOtherSource": "Zie ook andere bron",
     "sourceNotFound": "Geen terminologiebron gevonden voor deze URI"
   },
   "language": {
